# qwen3-think

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
src/qwen_think/: __init__.py  budget.py  router.py  sampling.py  session.py  types.py
src/qwen_think/backends/: __init__.py  base.py  dashscope.py  llamacpp.py  vllm.py
tests/: test_backends.py  test_budget.py  test_router.py  test_sampling.py  test_session.py  test_types.py
