[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen-think"
version = "0.1.1"
description = "Thinking session manager for Qwen3.6: backend normalization, sampling parameter swap, and 128K context budget guard."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "ArkaD171717" },
]
keywords = [
    "qwen",
    "qwen3.6",
    "thinking",
    "reasoning",
    "llm",
    "vllm",
    "sglang",
    "dashscope",
    "llama-cpp",
    "ai",
    "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_think"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
